--- a/style.css
+++ b/style.css
@@ -1,36 +1,42 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Roboto:wght@100;300;400;500;700;900&display=swap');
 
 body {
     margin: 0px;
 }
 
-.container {
-    width: 100vw;
-    height: 100vh;
-    background: #6C7A89;
+.cartao {
+    margin: auto;
+    max-width: 450px;
+    min-height: 100%;
     display: flex;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
-}
-.box {
-    width: 300px;
-    height: 300px;
-    margin-top: -180px;
-}
-.box img {
-    border-radius: 50%;
-    width: 300px;
-    border: 5px solid #000;
-    box-shadow: 4px 5px rgba(0, 0, 0, 0.514);
+    background-color: #fff;
+    flex-direction: column;
 }
 
-.name {
-    margin: 15px;
-}
-.name h1, h2 {
-    font-family: 'Roboto', sans-serif;
-    font-weight: 600;
-    color: white;
+.infos {
+    margin: auto;
+    padding: 15px;
     text-align: center;
+    align-items: center;
+    justify-content: center;
+}
+
+.infos img {
+    padding: 10px;
+    margin: 5px;
+    border-radius: 25px;
+    width: 200px;
+}
+
+.infos h1 {
+    font-family: 'Poppins', sans-serif;
+    font-size: 28px;
+}
+.infos h2 {
+    font-family:'Roboto', sans-serif;
+    line-height: 0px;
+    opacity: 0.8;
 }
