--- a/style.css
+++ b/style.css
@@ -3,16 +3,18 @@
 
 body {
     margin: 0px;
+    background: rgb(2,0,36);
+    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%);    
 }
 
 .cartao {
     margin: auto;
-    max-width: 450px;
+    padding: 20px;
+    max-width: 480px;
     min-height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #fff;
     flex-direction: column;
 }
 
@@ -22,13 +24,15 @@ body {
     text-align: center;
     align-items: center;
     justify-content: center;
+    background-color: antiquewhite;
+    border-style: dashed;
 }
 
 .infos img {
     padding: 10px;
     margin: 5px;
-    border-radius: 25px;
-    width: 200px;
+    border-radius: 10%;
+    width: 250px;
 }
 
 .infos h1 {
