--- a/style.css
+++ b/style.css
@@ -44,3 +44,13 @@ body {
     line-height: 0px;
     opacity: 0.8;
 }
+
+.links {
+    margin: auto;
+    padding: 15px;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    background-color: antiquewhite;
+    border-style: dashed;
+}
